Add site speed tracking to Google Analytics.

--- a/r2/r2/templates/base.html
+++ b/r2/r2/templates/base.html
@@ -111,6 +111,7 @@ reddit, reddit.com, vote, comment, submit
   _gaq.push(['_setCustomVar', 2, 'srpath', '${UserInfo.get_srpath()}', 3]);
   _gaq.push(['_setCustomVar', 3, 'usertype', '${UserInfo.get_usertype()}', 2]);
   _gaq.push(['_trackPageview']);
+  _gaq.push(['_trackPageLoadTime']);
 
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
