Only allow 'block user' from PMs

--- a/r2/r2/templates/printablebuttons.html
+++ b/r2/r2/templates/printablebuttons.html
@@ -302,7 +302,7 @@
   %endif
   %if thing.recipient:
     ${self.banbuttons()}
-      %if thing.thing.author_id != c.user._id and thing.thing.author_id not in c.user.enemies:
+      %if not thing.was_comment and thing.thing.author_id != c.user._id and thing.thing.author_id not in c.user.enemies:
         <li>
           ${ynbutton(_("block user"), _("blocked"), "block", "hide_thing")}
         </li>
