User option to block flair, and layout fixes.

--- a/r2/r2/public/static/css/reddit.css
+++ b/r2/r2/public/static/css/reddit.css
@@ -4070,6 +4070,7 @@ dd { margin-left: 20px;  }
     padding: 5px;
     border: 1px solid gray;
     font-size: larger;
+    list-style: none;
 }
 
 .sidecontentbox .more { 
@@ -4087,10 +4088,6 @@ dd { margin-left: 20px;  }
     margin: 0;
     color: gray;
     font-size: 130%;
-}
-
-.sidecontentbox .author {
-    display: block;
 }
 
 .titlebox form.toggle {
