Convert SimpleGetMenu to SimplePostMenu.
Fixes issue 118.

The original approach to menus/navbuttons would commit changes to user
preferences as a side effect of validation during a GET request. The new
approach now is to add a POST handler with the same exact validation that
just trivially redirects to the GET url. NavButton links are now hidden
form submits, and the VMenu validator will now only commit preference
changes on POST requests.

--- a/r2/r2/templates/utils.html
+++ b/r2/r2/templates/utils.html
@@ -44,7 +44,6 @@
 </%def>
 
 
-
 ## thing should be global
 <%def name="_id(arg)">
 id="${arg}_${thing and thing._fullname or ''}"
@@ -135,6 +134,28 @@ ${first_defined(kw[1:])}
   %>
 
   ${unsafe((fmt % link) if fmt else link)}
+</%def>
+
+<%def name="post_link(link_text, post_path, redir_path, params, _sr_path=True,
+                      nocname=False, fmt='', target='', **kw)">
+  <%
+    action = add_sr(post_path, sr_path=_sr_path, nocname=nocname)
+    href = add_sr(redir_path, sr_path=_sr_path, nocname=nocname)
+    if (not target or target == '_parent') and c.cname:
+        target = '_top'
+    if c.cname and redir_path.startswith('http://'):
+        target = '_top'
+    if target:
+        kw['target'] = target
+    onclick = "$(this).parent().submit(); return false;"
+    link = _a_buffered(link_text, href=href, onclick=onclick)
+  %>
+  <form method="POST" action="${action}">
+    %for k, v in params.iteritems():
+      <input type="hidden" name="${k}" value="${v}">
+    %endfor
+    ${unsafe((fmt % link) if fmt else link)}
+  </form>
 </%def>
 
 
