Make read-only mode slightly less frustrating.
Also includes some work on heavy-load mode which
isn't being used right now.

--- a/r2/r2/templates/printablebuttons.html
+++ b/r2/r2/templates/printablebuttons.html
@@ -149,10 +149,12 @@
       ${self.simple_button(_("edit"), "edit_usertext", css_class="edit-usertext")}
     </li>
   %endif
+  % if c.user_is_loggedin or not g.read_only_mode:
   <li class="share">
     ${self.toggle_button("share-button", _("share"), _("cancel"),
                          "share", "cancelShare", login_required = True)}
   </li>
+  % endif
   %if thing.is_loggedin:
     <li>
     %if thing.saved:
