--- a/r2/r2/templates/reddit.html
+++ b/r2/r2/templates/reddit.html
@@ -142,7 +142,7 @@
   
       ${thing.footer}
   
-      %if not c.user_is_loggedin:
+      %if not c.user_is_loggedin and not g.read_only_mode:
         %if thing.enable_login_cover:
         <div class="login-popup cover-overlay" style="display: none">
           <div class="cover" onclick="return hidecover(this)"></div>
