Add a contextual description metatag for scrapers.

--- a/r2/r2/templates/base.html
+++ b/r2/r2/templates/base.html
@@ -34,6 +34,7 @@
     
     <meta name="keywords" content="${self.keywords()}" />
     <meta name="title" content="${self.Title()}" />
+    <meta name="description" content="${getattr(thing, 'short_description', None) or g.short_description}" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     ${self.robots()}
     
