Add viewport tag to the main site for mobile users.

--- a/r2/r2/templates/base.html
+++ b/r2/r2/templates/base.html
@@ -36,6 +36,7 @@
     <meta name="title" content="${self.Title()}" />
     <meta name="description" content="${getattr(thing, 'short_description', None) or g.short_description}" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=800, initial-scale=1" />
     ${self.robots()}
     
     ##these are globals, so they should be run first
