--- a/r2/r2/public/static/css/reddit.css
+++ b/r2/r2/public/static/css/reddit.css
@@ -700,6 +700,8 @@ ul.flat-vert {text-align: left;}
     display: block;
 }
 
+.flairselector .error { text-align: center; }
+
 .flairselector ul { float: left; width: 200px; }
 
 .flairselector .selected, .flairselector.active li {
