Use cross domain https for slightly safer login.
Login UI code has been simplified and moved into the client side. CORS
is used for the cross-domain POST if available, otherwise an iframe and
cookie polling technique is used. Start fleshing out the new JS tree. :)

--- a/r2/r2/templates/utils.html
+++ b/r2/r2/templates/utils.html
@@ -365,7 +365,8 @@ ${unsafe(txt)}
   <%
      from r2.lib.template_helpers import get_domain
    %>
-   var reddit = {
+   r = {};
+   r.config = reddit = {
       /* is the user logged in */
       logged: ${c.user_is_loggedin and ("'%s'" % c.user.name) or "false"},
       /* the subreddit's name (for posts) */
@@ -383,6 +384,8 @@ ${unsafe(txt)}
                                 no_www = True)}",
       /* where do ajax request go? */
       ajax_domain: "${get_domain(cname=c.authorized_cname, subreddit = False)}",
+      extension: '${c.extension}',
+      https_endpoint: "${g.https_endpoint}",
       /* debugging? */
       debug: ${"true" if g.debug else "false"}, 
       vl: {},
