--- a/r2/r2/templates/newlink.html
+++ b/r2/r2/templates/newlink.html
@@ -26,10 +26,16 @@
    from r2.lib.template_helpers import add_sr
 %>
 
-<%namespace file="utils.html" import="error_field, submit_form, plain_link, reddit_selector"/>
+<%namespace file="utils.html" import="error_field, submit_form, _a_buffered, reddit_selector"/>
 <%namespace name="utils" file="utils.html"/>
 
-<h1>${_("submit to %(sr)s") % dict(sr=thing.default_sr if not thing.on_default_sr else _("reddit"))}</h1>
+<%
+  if thing.default_sr:
+    sr = "&#32" + _a_buffered(thing.default_sr.name, href=thing.default_sr.path)
+  else:
+    sr = _("reddit")
+%>
+<h1>${unsafe(_("submit to %(sr)s") % dict(sr=sr))}</h1>
 
 <%utils:submit_form onsubmit="return post_form(this, 'submit', linkstatus, null, true)" 
                     action=${add_sr("/submit")},
@@ -92,7 +98,7 @@ ${thing.formtabs_menu}
 
 <div class="spacer">
   <%utils:round_field title="${_('choose a subreddit')}" id="reddit-field">
-    ${reddit_selector(thing.default_sr, thing.sr_searches, thing.subreddits)}
+    ${reddit_selector(thing.default_sr.name if thing.default_sr else None, thing.sr_searches, thing.subreddits)}
   </%utils:round_field>
 </div>
 
