--- a/r2/r2/templates/profilebar.html
+++ b/r2/r2/templates/profilebar.html
@@ -58,42 +58,57 @@
     </div>
   %endif
 
-  %if c.user_is_admin:
-    <table>
+  <span class="karma">${locale.format("%d", thing.user.safe_karma, True)}</span>
+  &#32;
+  ${_("link karma")}
+
+  <br/>
+  <span class="karma comment-karma">${locale.format("%d", thing.user.comment_karma, True)}</span>
+  &#32;
+  ${_("comment karma")}
+
+  %if c.user_is_admin or (c.user.gold and c.user == thing.user):
+    <table id="per-sr-karma"
+      % if not c.user_is_admin:
+      class="more-karmas"
+      % endif
+      >
+     <thead>
+        <tr>
+          <th id="sr-karma-header">subreddit</th>
+          <th>link</th>
+          <th>comment</th>
+        </tr>
+     </thead>
      <%
        karmas = thing.user.all_karmas()
      %>
-     %for i, (label, lc, cc) in enumerate(karmas):
+     <tbody>
+     %for i, (label, title, lc, cc) in enumerate(karmas):
         <tr
-        %if i < 5:
-          style="text-align:right"
-        %else:
+        % if c.user_is_admin and i >= 5:
           class="more-karmas"
-          style="text-align:right; display: none"
-        %endif
+        % endif
         >
-          <th>${label}:</th>
-          <td><b>${lc}</b></td>
-          <td>/</td>
-          <td><b>${cc}</b></td>
+        % if title:
+          <th class="helpful" title="${title}"><span>${label}</span></th>
+        % else:
+          <th>${label}</th>
+        % endif
+          <td>${lc}</td>
+          <td>${cc}</td>
         </tr>
       %endfor
+      </tbody>
     </table>
-    %if i >= 5:
+    % if not c.user_is_admin or len(karmas) > 5:
+    <div class="giftgold karma-breakdown">
       <a href="javascript:void(0)"
          onclick="$('.more-karmas').show();$(this).hide();return false">
-         show karma for all ${len(karmas)} reddits
+         show karma breakdown by subreddit
       </a>
-    %endif
-  %else:
-    <span class="karma">${locale.format("%d", thing.user.safe_karma, True)}</span>
-    &#32;
-    ${_("link karma")}
-    
-    <br/>
-    <span class="karma">${locale.format("%d", thing.user.comment_karma, True)}</span>
-    &#32;
-    ${_("comment karma")}
+    </div>
+    % endif
   %endif
 
   %if thing.gold_remaining:
