Typo in promotelinkform.html (large -> larger)

--- a/r2/r2/templates/promotelinkform.html
+++ b/r2/r2/templates/promotelinkform.html
@@ -295,7 +295,7 @@ ${unsafe(js.use('sponsored'))}
 
 %if thing.link and (trusted or not promote.is_promoted(thing.link)):
   <%utils:line_field title="${_('look and feel')}"
-                     description="images will be resized if large than 70 x 70 pixels" css_class="rounded">
+                     description="images will be resized if larger than 70 x 70 pixels" css_class="rounded">
     <div class="delete-field">
       <%utils:image_upload post_target="/api/link_thumb" 
                            current_image="${thumb}"
