Replace old apple touch icon.

--- a/r2/r2/templates/reddit.html
+++ b/r2/r2/templates/reddit.html
@@ -87,8 +87,9 @@
           type="text/css" />
   %endif
 
-  <link rel='shortcut icon' href="${static('favicon.ico')}"
-        type="image/x-icon" />
+  <link rel='shortcut icon' href="${static('favicon.ico')}" type="image/x-icon" />
+  <link rel='apple-touch-icon-precomposed' href="${static('icon-touch.png')}" />
+
   %if thing.extension_handling:
     <%
        rss= add_sr(join_urls(request.path,'.rss'))
