Add icon for Opera speed dial.

--- a/r2/r2/templates/reddit.html
+++ b/r2/r2/templates/reddit.html
@@ -47,6 +47,7 @@
     <link rel="shorturl" href="http://${thing.shortlink}"/>
   %endif
 
+  <link rel='icon' href="${static('icon.png')}" sizes="256x256" type="image/png" />
   <link rel='shortcut icon' href="${static('favicon.ico')}" type="image/x-icon" />
   <link rel='apple-touch-icon-precomposed' href="${static('icon-touch.png')}" />
   %if thing.extension_handling:
