Allow a top level id to be specified for the page content div.

--- a/r2/r2/templates/reddit.html
+++ b/r2/r2/templates/reddit.html
@@ -139,7 +139,7 @@
       ##<div class="fixedwidth"><!--IE6sux--></div>
       ##<div class="clearleft"><!--IE6sux--></div>
       <a name="content"></a>
-      <div class="content${css_class(thing)}">
+      <div ${tags(id=thing.content_id)} class="content${css_class(thing)}">
         ${thing.content()}
       </div>
     %endif
