Add collapse button to the moderation tools sidebar box.
Also, add an id attribute to the moderation tools box.

--- a/r2/r2/templates/sidecontentbox.html
+++ b/r2/r2/templates/sidecontentbox.html
@@ -19,14 +19,19 @@
 ## All portions of the code written by CondeNet are Copyright (c) 2006-2010
 ## CondeNet, Inc. All Rights Reserved.
 ################################################################################
-
-<div class="sidecontentbox ${thing.extra_class or ''}">
+<%namespace file="utils.html" import="tags"/>
+<div class="sidecontentbox ${thing.extra_class or ''} ${'collapsible' if thing.collapsible else ''}" ${tags(_id=thing._id)}>
   %if thing.helplink:
      <a class="helplink" href="${thing.helplink[0]}">
        ${thing.helplink[1]}
      </a>
   %endif
-  <h1>${thing.title.upper()}</h1>
+  <div class="title">
+    <h1>${thing.title.upper()}</h1>
+    %if thing.collapsible:
+      <span class="collapse-button">-</span>
+    %endif
+  </div>
   <ul class="content">
     %for c in thing.content:
       <li>${c}</li>
@@ -40,4 +45,8 @@
       </li>
     %endif
   </ul>
+
+  %if thing.collapsible:
+    <script>r.ui.collapsibleSideBox("${thing._id}")</script>
+  %endif
 </div>
