Removes two extraneous quotes in template HTML around IE-specific stylesheet includes.

--- a/r2/r2/templates/reddit.html
+++ b/r2/r2/templates/reddit.html
@@ -102,12 +102,12 @@
   %endif
 
   <!--[if lt IE 7]>
-    <link rel="stylesheet" href="${static('reddit-ie6-hax.css')}"" 
+    <link rel="stylesheet" href="${static('reddit-ie6-hax.css')}"
           type="text/css" />
   <![endif]-->
 
   <!--[if lt IE 8]>
-    <link rel="stylesheet" href="${static('reddit-ie7-hax.css')}"" 
+    <link rel="stylesheet" href="${static('reddit-ie7-hax.css')}"
           type="text/css" />
   <![endif]-->
 </%def>
