--- a/r2/r2/templates/reddit.html
+++ b/r2/r2/templates/reddit.html
@@ -33,6 +33,7 @@
 <%namespace file="framebuster.html" import="framebuster"/>
 <%namespace file="less.html" import="less_js, less_stylesheet"/>
 <%namespace file="utils.html" import="tags, classes"/>
+<%namespace file="adminbar.html" import="adminbar_stylesheet"/>
 <%inherit file="base.html"/>
 
 <%def name="Title()">
@@ -94,6 +95,8 @@
     <link rel="stylesheet" href="${static('reddit-ie7-hax.css')}"
           type="text/css" />
   <![endif]-->
+
+  ${adminbar_stylesheet()}
 </%def>
 
 <%def name="javascript()">
@@ -118,6 +121,7 @@
 </%def>
 
 <%def name="bodyContent()">
+  <%include file="adminbar.html"/>
   <%include file="redditheader.html"/>
 
   %if thing.show_sidebar:
