--- a/r2/r2/public/static/css/reddit.css
+++ b/r2/r2/public/static/css/reddit.css
@@ -3600,7 +3600,8 @@ ul.tabmenu.formtab {
 
 .roundfield textarea,
 .roundfield input[type=text],
-.roundfield input[type=password] {
+.roundfield input[type=password],
+.roundfield input[type=number] {
     font-size: 100%;
     width: 492px;
     padding: 3px;
@@ -5621,4 +5622,27 @@ tr.gold-accent + tr > td {
 
 .sr-description p {
     margin: .75em 0;
+}
+
+/** one-time password stuff **/
+#pref-otp .roundfield {
+    margin: 1em 0;
+}
+
+#pref-otp-qr {
+    display: none;
+}
+
+#otp-secret-info {
+    margin: 2em;
+    width: 512px;
+    font-size: small;
+}
+
+#otp-secret-info div {
+    margin: 1em 0;
+}
+
+#otp-secret-info .secret {
+    font-weight: bold;
 }
