Require two-factor authentication to enable admin mode.
This feature can be disabled with the new ini setting
`disable_admin_otp`.

--- a/r2/r2/public/static/css/reddit.css
+++ b/r2/r2/public/static/css/reddit.css
@@ -5409,8 +5409,13 @@ tr.gold-accent + tr > td {
 }
 
 .adminpasswordform {
-    margin-bottom: .5em;
-    display: inline-block;
+    display: block;
+    margin: .5em auto 0 auto;
+}
+
+.adminpasswordform label {
+    display: block;
+    padding: .5em;
 }
 
 .content.api-help {
