--- a/r2/r2/templates/spotlightlisting.html
+++ b/r2/r2/templates/spotlightlisting.html
@@ -28,15 +28,14 @@
 
 <div id="siteTable_organic" class="organic-listing">
   <%
-     lookup = dict((t._fullname, t) for t in thing.things)
      seen = set([])
    %>
   %for name in thing.spotlight_items:
     %if name in seen:
       <% pass %>
-    %elif lookup.has_key(name):
+    %elif name in thing.lookup:
       <% seen.add(name) %>
-      ${unsafe(lookup[name].render(display = (thing.visible_item == name)))}
+      ${unsafe(thing.lookup[name].render(display = (thing.visible_item == name)))}
     %else:
       <div class="thing id-${name} stub" style="display:none"></div>
     %endif
